# mongowrapper

./: README.md  pyproject.toml
mongowrapper/: __init__.py  admin.py  base.py  consts.py  models.py  user.py
mongowrapper/logger/: admin.py  base.py  consts.py  user.py
